# nddev-zcode-app

./: .gitignore  .shellcheckrc  AGENTS.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  NOTICE  README.md  SECURITY.md  SUPPORT.md  pyproject.toml  pyrightconfig.json
.agents/skills/dev-workflow/: SKILL.md
.agents/skills/repo-orientation/: SKILL.md
.claude/: CLAUDE.md
.claude/skills/: repo-orientation
.gds/: bundle.lock.yaml  compiled-policy.json  repository.yaml
.github/: CODEOWNERS  dependabot.yml  labeler.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  change_request.yml  config.yml
.github/branch-protection/: main.json
.github/workflows/: README.md  actionlint.yml  codeql.yml  cross-platform.yml  dependency-review.yml  labeler.yml  release.yml  scorecard.yml  secret-scan.yml  security-static.yml  validate.yml  zizmor.yml
.serena/: .gitignore  project.yml
.serena/memories/: INDEX-01-OVERVIEW.md
cli-tools/: validate_public_contracts.py
cli-tools/scripts/: bootstrap.sh  install.sh  restore.sh
cli-tools/scripts/lib/: build.sh  common.sh  version.sh
cli-tools/scripts/macos/: install.sh
cli-tools/scripts/ubuntu/: install.sh
config/: nddev-contract.json
development/: README.md
docs/: README.md  architecture.md  install.md  secrets.md
references/: zcode-baseline.json
zcode_tools/: AGENTS.md  hooks.json  marketplace.json  mcp.json  v2-setting.template.json
zcode_tools/marketplaces/nddev-builder/: AGENTS.md  cli-config.template.json  marketplace.json  v2-config.template.json  v2-setting.template.json
(+83 files in other folders)
