[project]
name = "nddev-zcode-app"
version = "1.0.4"
description = "Build system + installer that recreates a complete, version-stamped ~/.zcode from source on macOS and Ubuntu."
readme = "README.md"
requires-python = ">=3.13,<3.14"
license = "AGPL-3.0-or-later"
license-files = ["LICENSE"]
authors = [
  { name = "Danil Silantyev", email = "rldyourmnd@users.noreply.github.com" },
]
maintainers = [
  { name = "Danil Silantyev", email = "rldyourmnd@users.noreply.github.com" },
]
keywords = ["zcode", "glm", "marketplace", "installer", "build-system", "agents", "plugins"]
classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: GNU Affero General Public License v3 or later (AGPLv3+)",
  "Topic :: Software Development",
  "Topic :: System :: Installation/Setup",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.13",
  "Operating System :: POSIX :: Linux",
  "Operating System :: MacOS",
]

[project.urls]
Homepage = "https://github.com/NDDev-it-com/nddev-zcode-app"
Repository = "https://github.com/NDDev-it-com/nddev-zcode-app"
Issues = "https://github.com/NDDev-it-com/nddev-zcode-app/issues"
Changelog = "https://github.com/NDDev-it-com/nddev-zcode-app/blob/main/CHANGELOG.md"
